--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="favourite">favourite</string>
     <string name="settings">settings</string>
     <string name="search">Search</string>
+    <string name="chipLabelYesterday2">Two days back</string>
+    <string name="chipLabelYesterday">Yesterday</string>
+    <string name="chipLabelToday">Today</string>
 
 </resources>
