--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,11 @@
     <string name="label_tabitem_mars">Mars</string>
     <string name="label_tabitem_earth">Earth</string>
     <string name="label_tabitem_system">System</string>
+    <string name="label_chip_next">Next</string>
+    <string name="label_chip_previous">Previous</string>
+    <string name="label_chip_today">Today</string>
+    <string name="label_chip_hd">HD</string>
+    <string name="label_description_loading">Loading ...</string>
+    <string name="label_image_desc">Picture of the day</string>
 
 </resources>
