--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,42 @@
     <string name="label_description_loading">Loading ...</string>
     <string name="label_image_desc">Picture of the day</string>
     <string name="toolabar_app_title">NASA</string>
+    <string name="appbar_scrolling_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
+    <string name="collapsing_toolbar_title">Collapsing Toolbar</string>
+    <string name="button">Button</string>
+    <string name="lorem_ipsum">
+        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
+        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
+        "when an unknown printer took a galley of type and scrambled it to make a type "
+        "specimen book. It has survived not only five centuries, but also the leap into "
+        "electronic typesetting, remaining essentially unchanged. It was popularised in "
+        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
+        "and more recently with desktop publishing software like Aldus PageMaker "
+        "including versions of Lorem Ipsum.\n"
+        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
+        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
+        "when an unknown printer took a galley of type and scrambled it to make a type "
+        "specimen book. It has survived not only five centuries, but also the leap into "
+        "electronic typesetting, remaining essentially unchanged. It was popularised in "
+        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
+        "and more recently with desktop publishing software like Aldus PageMaker "
+        "including versions of Lorem Ipsum.\n"
+        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
+        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
+        "when an unknown printer took a galley of type and scrambled it to make a type "
+        "specimen book. It has survived not only five centuries, but also the leap into "
+        "electronic typesetting, remaining essentially unchanged. It was popularised in "
+        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
+        "and more recently with desktop publishing software like Aldus PageMaker "
+        "including versions of Lorem Ipsum.\n"
+        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
+        "Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
+        "when an unknown printer took a galley of type and scrambled it to make a type "
+        "specimen book. It has survived not only five centuries, but also the leap into "
+        "electronic typesetting, remaining essentially unchanged. It was popularised in "
+        "the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, "
+        "and more recently with desktop publishing software like Aldus PageMaker "
+        "including versions of Lorem Ipsum.\n"
+    </string>
 
 </resources>
