--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="button_label_green">GREEN</string>
     <string name="no_photos_for_date">"No photos for %s"</string>
     <string name="photo_counter_and_date_label">"%1$s/%2$s\n%3$s"</string>
+    <string name="photo_counter">"%1$s/%2$s"</string>
     <string name="picture_of_the_day_icon">picture of the day icon</string>
     <string name="mars_icon">mars icon</string>
     <string name="earth_icon">earth icon</string>
